2000-02-21  Lauris Kaplinski  <lauris@ariman.ee>

       * configure.in: Added et to ALL_LINGUAS
	
Tue Jan  4 02:41:28 2000  Owen Taylor  <otaylor@redhat.com>

	* README: Added note telling Debian users about more
	splitty	little packages they need.

	* configure.in (MEMPROF_LIBS): Added check for -lglade-gnome

Sat Nov 20 17:14:40 1999  Owen Taylor  <otaylor@redhat.com>

	* bfdutils.c (process_map_sections): Try accessing
	section->_cooked_size to deal with bug(?) in older
	binutils.

	* memintercept.c (STACK_MAX_SIZE): Change PIPE_BUF to
	#define constant since we no longer use pipes.

Sat Nov 20 10:40:48 1999  Owen Taylor  <otaylor@redhat.com>

        [ Sync CVS with my current tree. This commit destabilizes
	  things a bit, but adds neat new features like
	  correct tracing of threaded programs; some options like
	  turning off following forks not yet implemented ]
	
	* memintercept.[ch]: Major reworking of the way we handle
	intercepting malloc() and friends - the __malloc_hook
	functionality is inherently not thread safe. So
	directly override the functions in our LD_PRELOAD.
	Also, override fork(), clone() and exec() and report these
	back to our parent to allow tracing of threads and
	forking programs.

	* process.c memintercept.c: Change the mechanism for
	communicating with subprocesses from a single pipe to
	a Unix domain socket with accepts connections for
	new subprocesses.
	
	* process.c: Completely rework handling of getting input
	from multiple processes. Add a command-queue to deal
	with recieving out-of-order input from multiple threads
	within a single process.
	
	* main.c: Allow multiple process windows, create new
	process windows when a fork or exec occurs.
	
	* Makefile.am: add -ldl to LIBADD for libmemintercept.so,
	since we now use DL functions to get original symbols. 

        * process.c bfdutils.c memprof.h: Add an exported demangle function,
	store symbol names demangled.

	* README: Add note for Debian users telling them to